# docs/swagger.json
@@ -1523,12 +1523,6 @@
                 "summary": "paging query account holding collection list",
                 "parameters": [
                     {
-                        "type": "number",
-                        "description": "1:pledged, 2:unPledged, other:all",
-                        "name": "status",
-                        "in": "query"
-                    },
-                    {
                         "type": "string",
                         "description": "owner",
                         "name": "owner",
@@ -1755,12 +1749,6 @@
                         "name": "owner",
                         "in": "query",
                         "required": true
-                    },
-                    {
-                        "type": "number",
-                        "description": "1:pledged, 2:free trade, 3:can pledge, other:all",
-                        "name": "status",
-                        "in": "query"
                     },
                     {
                         "type": "string",
@@ -2367,47 +2355,6 @@
                 }
             }
         },
-        "model.Account": {
-            "type": "object",
-            "properties": {
-                "address": {
-                    "description": "address",
-                    "type": "string"
-                },
-                "balance": {
-                    "description": "The total amount of coins in the chain",
-                    "type": "string"
-                },
-                "code": {
-                    "description": "bytecode",
-                    "type": "string"
-                },
-                "createdTx": {
-                    "description": "create transaction",
-                    "type": "string"
-                },
-                "creator": {
-                    "description": "address",
-                    "type": "string"
-                },
-                "name": {
-                    "description": "name",
-                    "type": "string"
-                },
-                "nonce": {
-                    "description": "transaction random number, transaction volume",
-                    "type": "integer"
-                },
-                "symbol": {
-                    "description": "symbol",
-                    "type": "string"
-                },
-                "type": {
-                    "description": "contract types, ERC20, ERC721, ERC1155",
-                    "type": "integer"
-                }
-            }
-        },
         "model.Block": {
             "type": "object",
             "properties": {
@@ -2864,6 +2811,10 @@
         "model.Stats": {
             "type": "object",
             "properties": {
+                "activeAccount": {
+                    "description": "The number of active account",
+                    "type": "integer"
+                },
                 "avgBlockTime": {
                     "description": "average block time, ms",
                     "type": "integer"
@@ -3087,6 +3038,10 @@
                     "description": "name",
                     "type": "string"
                 },
+                "nftCount": {
+                    "description": "hold NFT number",
+                    "type": "integer"
+                },
                 "nonce": {
                     "description": "transaction random number, transaction volume",
                     "type": "integer"
@@ -3099,21 +3054,17 @@
                     "description": "Number of times to get SNFT rewards",
                     "type": "integer"
                 },
-                "snftAmount": {
-                    "description": "account snft pledge amount",
+                "snftCount": {
+                    "description": "hold SNFT number",
+                    "type": "integer"
+                },
+                "snftValue": {
+                    "description": "hold SNFT value",
                     "type": "string"
                 },
                 "symbol": {
                     "description": "symbol",
                     "type": "string"
-                },
-                "totalNFT": {
-                    "description": "Number of NFTs held",
-                    "type": "integer"
-                },
-                "totalSNFT": {
-                    "description": "Number of SNFTs held",
-                    "type": "integer"
                 },
                 "type": {
                     "description": "contract types, ERC20, ERC721, ERC1155",
@@ -3132,7 +3083,61 @@
                     "description": "Account list",
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/model.Account"
+                        "type": "object",
+                        "properties": {
+                            "address": {
+                                "description": "address",
+                                "type": "string"
+                            },
+                            "balance": {
+                                "description": "The total amount of coins in the chain",
+                                "type": "string"
+                            },
+                            "code": {
+                                "description": "bytecode",
+                                "type": "string"
+                            },
+                            "createdTx": {
+                                "description": "create transaction",
+                                "type": "string"
+                            },
+                            "creator": {
+                                "description": "address",
+                                "type": "string"
+                            },
+                            "exchangerAmount": {
+                                "description": "exchanger pledge amount",
+                                "type": "string"
+                            },
+                            "name": {
+                                "description": "name",
+                                "type": "string"
+                            },
+                            "nonce": {
+                                "description": "transaction random number, transaction volume",
+                                "type": "integer"
+                            },
+                            "snftCount": {
+                                "description": "hold SNFT number",
+                                "type": "integer"
+                            },
+                            "snftValue": {
+                                "description": "hold SNFT value",
+                                "type": "string"
+                            },
+                            "symbol": {
+                                "description": "symbol",
+                                "type": "string"
+                            },
+                            "type": {
+                                "description": "contract types, ERC20, ERC721, ERC1155",
+                                "type": "integer"
+                            },
+                            "validatorAmount": {
+                                "description": "validator pledge amount",
+                                "type": "string"
+                            }
+                        }
                     }
                 },
                 "balance": {
